--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face{
+  font-family: 'Gotham';
+  src: local('Gotham'), url(./fonts/Gotham-Black.otf) format('opentype')
+}
